--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <hr />
       <div>
           left {{lefts}} tasks.
+          <p>{{done}}</p>
       </div>
   </div>
   <script type="text/javascript" src="js/todo.js"></script>
